refactor: update order processing logic and enhance mapping for CommandeFournisseur